2018-01-15         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Small typo fix.
	* config.sub: Updated.
	* io.c (fork_and_open_slave_pty: Rationalize down to one
	function with two bodies.
	(set_slave_pty_attributes, push_pty_line_disciplines): Move
	into #ifdef for TERMIOS_H. Helps out with VMS compiling.

2018-01-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h: Remove extraneous '*' on parameters of
	type awk_ext_id. Thanks to Andrew Schorr for the report.

2018-01-11         Arnold D. Robbins     <arnold@skeeve.com>

	* compile, config.guess, config.rpath, config.sub,
	depcomp: Updated from GNULIB.

2018-01-08         John E. Malmberg      <wb8tyw@qsl.net>

	* io.c (set_slave_pty_attributes) Currently no termios on VMS.
	(set_slave_pty_attributes) No fork on VMS.

2018-01-04         Arnold D. Robbins     <arnold@skeeve.com>

	Refactor handling of slave pty. On AIX and HP-UX open
	slave in the child. Otherwise open slave in the parent
	before forking (restoring code mostly from 4.1.3). Thanks
	to Andrew Schorr for the bug report.

	* io.c (fork_and_open_slave_pty): New routine. Two versions.
	(set_slave_pty_attributes): New routine. Common code used by
	both versions of fork_and_open_slave_pty.
	(push_pty_line_disciplines): New routine. Common code used by
	both versions of fork_and_open_slave_pty.
	(two_way_open): Call fork_and_open_slave_pty instead of
	doing it inline.

2018-01-03         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (UPDATE_YEAR): Move to 2018. Revise copyright year.
	* NEWS: Bring up to date.

2018-01-02         Arnold D. Robbins     <arnold@skeeve.com>

	If ROUNDMODE changes, cause cached string conversions
	to become invalid. Thanks to Nethox <nethox@gmail.com>
	for the report. Day 1 bug from 4.1.0 release.

	In all the below files, bump copyright year, too.

	* array.c (value_info): Include strndmode in the output.
	* awk.h (NODE): New member, strndmode.
	(MPFR_round_mode): Add extern declaration.