@@ -1,3 +1,7 @@
+2018-01-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.tst: Sync against test/Makefile.in.
+
 2018-01-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.tst: Initial sync against test/Makefile.in.
