@@ -3,6 +3,8 @@
 	* Makefile.am (charset-tests-all): Add punctuation in the message.
 	(charset-msg-start): Add fr_FR.UTF-8 to list of desired locales,
 	reformat the message.
+	(isarrayunset): New test.
+	* isarrayunset.awk, isarrayunset.ok: New files.
 
 2018-01-15         Arnold D. Robbins     <arnold@skeeve.com>
 
