@@ -1,3 +1,9 @@
+2018-01-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* builtin.c (do_isarray): Check that tmp is Node_var
+	before calling DEREF. Thanks to Denis Shirokov
+	<cosmogen@gmail.com> for the report.
+
 2018-01-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* NEWS: Small typo fix.
